[package]
name = "skyscrapper-cli"
version = "0.1.0"
edition = "2021"
authors = ["Nils Mathieu <nmathieu@student.42.fr>"]
description = "a simply CLI tool to play the Skyscrapper game"
readme = "README.md"
license-file = "LICENSE.md"
repository = "https://github.com/nils-mathieu/skyscrapper-cli"

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help", "cargo", "unicode"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rand_xoshiro = "0.6"
termcolor = "1.1"
ctrlc = "3.2"
atty = "0.2"
